# minesweeper

./: .gitignore  LICENSE  README.md  example.py  main.py  minesweeper.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt
.github/workflows/: lint.yml
minesweeper/: __init__.py  test_minesweeper.py
tests/: test_minesweeper.py
